--- a/web/src/app/features/automations/workspace/components/select-trigger-sheet/select-trigger-sheet.component.html
+++ b/web/src/app/features/automations/workspace/components/select-trigger-sheet/select-trigger-sheet.component.html
@@ -55,14 +55,10 @@
               [trigger]="state().selectedTrigger!"
               (click)="service.goToTriggerSelection()" />
           }
-          <div class="flex flex-row gap-3 items-center">
-            <span class="tr-large">Parameters</span>
-            @if (state().selectedTrigger) {
-              <button trBtn size="sm">Edit</button>
-            }
-          </div>
-          @if (!state().selectedTrigger) {
-            <span class="text-muted text-center">No trigger selected</span>
+          @if (state().selectedTrigger) {
+            <tr-automation-parameter-list
+              class="mt-4"
+              [parameters]="state().trigger!.parameters" />
           }
         }
         @case (TriggerSelectionStep.INTEGRATION) {
