--- a/web/src/app/features/automations/workspace/components/automation-parameter-list/automation-parameter-list.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-list/automation-parameter-list.component.html
@@ -2,7 +2,7 @@
   <div class="flex items-center gap-2">
     <h3 class="tr-large">Parameters</h3>
     <span
-      class="px-2 py-0.5 text-xs font-medium rounded-full bg-gray-100 text-gray-600">
+      class="px-2 py-0.5 text-xs font-medium rounded-full bg-primary text-white">
       {{ parameters().length }}
     </span>
   </div>
@@ -15,13 +15,21 @@
       </div>
 
       @for (param of parameters(); track param.identifier) {
-        <div class="grid grid-cols-2 py-3 px-2 border-b bg-white items-center">
-          <span class="tr-medium text-gray-700">{{
-            param.identifier | pascalToPhrase
-          }}</span>
-          <span class="tr-medium text-gray-900">{{
-            param.value || 'Undefined'
-          }}</span>
+        <div
+          class="grid grid-cols-2 py-3 px-2 border-b bg-white items-center relative group cursor-pointer">
+          <div
+            class="absolute inset-0 bg-secondary/30 opacity-0 group-hover:opacity-100 flex items-center justify-center transition-all gap-1">
+            <span class="tr-large text-primary">Edit</span>
+            <ng-icon name="heroPencil" size="0.9rem" class="text-primary"/>
+          </div>
+          <span
+            class="tr-medium text-gray-700 group-hover:opacity-0 transition-all"
+            >{{ param.identifier | pascalToPhrase }}</span
+          >
+          <span
+            class="tr-medium text-gray-900 group-hover:opacity-0 transition-all"
+            >{{ param.value || 'Undefined' }}</span
+          >
         </div>
       }
     } @else {
