--- a/web/src/app/features/automations/workspace/components/automation-parameter-list/automation-parameter-list.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-list/automation-parameter-list.component.html
@@ -16,11 +16,12 @@
 
       @for (param of parameters(); track param.identifier) {
         <div
-          class="grid grid-cols-2 py-3 px-2 border-b bg-white items-center relative group cursor-pointer">
+          class="grid grid-cols-2 py-3 px-2 border-b bg-white items-center relative group cursor-pointer"
+          (click)="editParameter.emit(param)">
           <div
             class="absolute inset-0 bg-secondary/30 opacity-0 group-hover:opacity-100 flex items-center justify-center transition-all gap-1">
             <span class="tr-large text-primary">Edit</span>
-            <ng-icon name="heroPencil" size="0.9rem" class="text-primary"/>
+            <ng-icon name="heroPencil" size="0.9rem" class="text-primary" />
           </div>
           <span
             class="tr-medium text-gray-700 group-hover:opacity-0 transition-all"
