feat(web): add data binding for dynamic components for param edition

--- a/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit-string/automation-parameter-edit-string.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit-string/automation-parameter-edit-string.component.html
@@ -1,1 +1,4 @@
-<p>automation-parameter-edit-string works!</p>
+<input
+  trInput
+  [value]="parameter.value || ''"
+  (input)="onValueChange($event)" />
