--- a/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit.component.html
@@ -15,7 +15,7 @@
     <div class="flex flex-col">
       <span class="text-sm text-muted">Current Value</span>
       <span class="text-base font-medium text-gray-900">
-        {{ parameter().value || 'Undefined' }}
+        {{ parameterChange().displayValue || 'Undefined' }}
       </span>
     </div>
 
@@ -28,15 +28,22 @@
   </div>
 </div>
 <div class="mt-3">
-  <tr-tabs tab="raw" class="block max-w-3xl mx-auto">
-    <tr-tabs-list class="w-full grid grid-cols-2" aria-label="tabs example">
-      <button trTabsTrigger="raw">Manual</button>
-      <button trTabsTrigger="variable">Facts</button>
+  <tr-tabs
+    tab="raw"
+    class="block max-w-3xl mx-auto"
+    (tabActivated)="onTabChange($event)">
+    <tr-tabs-list
+      class="w-full grid"
+      [ngClass]="displayPrevious() ? 'grid-cols-2' : 'grid-cols-1'"
+      aria-label="tabs example">
+      <button trTabsTrigger="raw">Manual Input</button>
+      @if (displayPrevious()) {
+        <button trTabsTrigger="variable">From Previous</button>
+      }
     </tr-tabs-list>
-    <div class="p-4">
+    <div class="flex items-center justify-center">
       <div trTabsContent="raw">
-        <span>Enter the value</span>
-        <div class="flex flex-col space-y-3"><ng-container ##dynamicComponentsContainer></ng-container></div>
+        <ng-container ##dynamicComponentsContainer></ng-container>
       </div>
       <div trTabsContent="variable">Use a previous Automation fact</div>
     </div>
