feat(web): add generic integer manual input component for parameter edit

--- a/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit-integer/automation-parameter-edit-integer.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit-integer/automation-parameter-edit-integer.component.html
@@ -1,1 +1,6 @@
-<p>automation-parameter-edit-integer works!</p>
+<input
+  trInput
+  [value]="parameter.value || ''"
+  (input)="onValueChange($event)"
+  class="w-full"
+  trNumericOnly />
