--- a/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit-string/automation-parameter-edit-string.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit-string/automation-parameter-edit-string.component.html
@@ -1,4 +1,4 @@
 <input
   trInput
   [value]="parameter.value || ''"
-  (input)="onValueChange($event)" />
+  (input)="onValueChange($event)" class="w-full"/>
