--- a/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-edit/automation-parameter-edit.component.html
@@ -43,7 +43,7 @@
     </tr-tabs-list>
     <div class="flex items-center justify-center">
       <div trTabsContent="raw">
-        <ng-container ##dynamicComponentsContainer></ng-container>
+        <ng-container #dynamicComponentsContainer></ng-container>
       </div>
       <div trTabsContent="variable">Use a previous Automation fact</div>
     </div>
