--- a/web/src/app/features/automations/workspace/components/automation-parameter-list/automation-parameter-list.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-list/automation-parameter-list.component.html
@@ -7,7 +7,7 @@
     </span>
   </div>
 
-  <div class="flex flex-col rounded-lg border bg-secondary">
+  <div class="flex flex-col rounded-md border bg-secondary">
     @if (parameters().length > 0) {
       <div class="grid grid-cols-2 py-3 px-2 border-b border-secondary">
         <span class="text-sm font-semibold text-muted">Parameter</span>
