--- a/web/src/app/features/automations/workspace/components/automation-parameter-list/automation-parameter-list.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-list/automation-parameter-list.component.html
@@ -8,13 +8,16 @@
   </div>
 
   <div class="flex flex-col rounded-md border bg-secondary">
-    @if (parameters().length > 0) {
+    @if (parameterEditService.currentParameters().length > 0) {
       <div class="grid grid-cols-2 py-3 px-2 border-b border-secondary">
         <span class="text-sm font-semibold text-muted">Parameter</span>
         <span class="text-sm font-semibold text-muted">Value</span>
       </div>
 
-      @for (param of parameters(); track param.identifier) {
+      @for (
+        param of parameterEditService.currentParameters();
+        track param.identifier
+      ) {
         <div
           class="grid grid-cols-2 py-3 px-2 border-b bg-white items-center relative group cursor-pointer"
           (click)="editParameter.emit(param)">
