--- a/web/src/app/features/automations/workspace/components/select-trigger-sheet/select-trigger-sheet.component.html
+++ b/web/src/app/features/automations/workspace/components/select-trigger-sheet/select-trigger-sheet.component.html
@@ -89,8 +89,8 @@
         @case (TriggerSelectionStep.PARAMETER) {
           <tr-automation-parameter-edit
             [integrationId]="service.state().selectedLinkedIntegration!.id"
-            [automationStepIdentifier]="service.state().trigger!.nameIdentifier"
             [parameter]="service.state().selectedParameter!"
+            [parameterDescription]="service.getSelectedParameterDescription()"
             [parameterType]="service.state().selecterParameterType!" />
         }
       }
