feat(web): add validity check for saving

--- a/web/src/app/features/automations/workspace/components/automation-parameter-list/automation-parameter-list.component.html
+++ b/web/src/app/features/automations/workspace/components/automation-parameter-list/automation-parameter-list.component.html
@@ -27,6 +27,12 @@
             class="tr-medium text-gray-700 group-hover:opacity-0 transition-all"
             >{{ param.identifier | pascalToPhrase }}</span
           >
+          @if (!param.value) {
+            <span
+              class="ml-auto tr-medium text-gray-500 group-hover:opacity-0 transition-all"
+              >Empty</span
+            >
+          }
         </button>
       }
     } @else {
