--- a/web/src/app/features/automations/workspace/components/select-trigger-sheet/trigger-selection/trigger-selection.component.html
+++ b/web/src/app/features/automations/workspace/components/select-trigger-sheet/trigger-selection/trigger-selection.component.html
@@ -3,7 +3,7 @@
     <div class="flex flex-col p-3 space-y-3">
       @for (trigger of availableTriggers(); track trigger.name) {
         <tr-trigger-selection-button
-          [trigger]="trigger"
+          [automationEvent]="trigger"
           (click)="selectTrigger(trigger)" />
       } @empty {
         <span class="text-center text-gray-400">No triggers available</span>
