--- a/web/src/app/features/automations/workspace/components/edit-sheets/select-action-sheet/action-selection/action-selection.component.html
+++ b/web/src/app/features/automations/workspace/components/edit-sheets/select-action-sheet/action-selection/action-selection.component.html
@@ -1,13 +1,13 @@
 <div class="flex flex-col h-full">
   <div class="flex-grow bg-secondary rounded-md">
     <div class="flex flex-col p-3 space-y-3">
-      @for (trigger of availableTriggers(); track trigger.name) {
+      @for (action of availableActions(); track action.name) {
         <tr-trigger-selection-button
           [color]="integration().color"
-          [automationEvent]="trigger"
-          (click)="selectTrigger(trigger)" />
+          [automationEvent]="action"
+          (click)="selectAction(action)" />
       } @empty {
-        <span class="text-center text-gray-400">No triggers available</span>
+        <span class="text-center text-gray-400">No Actions available</span>
       }
     </div>
   </div>
