--- a/web/src/app/features/automations/workspace/components/select-trigger-sheet/select-trigger-sheet.component.html
+++ b/web/src/app/features/automations/workspace/components/select-trigger-sheet/select-trigger-sheet.component.html
@@ -37,6 +37,7 @@
             </button>
           } @else {
             <tr-trigger-selection-button
+              [color]="service.baseState().selectedIntegration!.color"
               [automationEvent]="service.state().selectedTrigger!"
               (click)="service.goToStepSelection()" />
           }
